--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,8 @@ dependencies = [
     "langchain-openai>=1.1.7",
     "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.45",
     "uvicorn>=0.40.0",
+    "cryptography>=40.0.0",
+    "asyncpg>=0.31.0",
 ]
